[gd_scene load_steps=8 format=3 uid="uid://d4n3jrsf5mklr"]

[ext_resource type="Script" path="res://Scripts/GUI/GUIManager.gd" id="1_80t64"]
[ext_resource type="Script" path="res://Scripts/GUI/Chrono.gd" id="1_01880"]
[ext_resource type="Texture2D" uid="uid://lkr8evcgvegh" path="res://Textures/User Interface/StaminaBar/stamina-0.png" id="3_chd1m"]
[ext_resource type="Texture2D" uid="uid://dhegpra18wus4" path="res://Textures/User Interface/StaminaBar/stamina-100.png" id="4_lngnv"]

[sub_resource type="LabelSettings" id="LabelSettings_n2582"]
line_spacing = 1.0
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_jvvc3"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_1uukh"]
line_spacing = 5.0

[node name="Gui" type="Control" node_paths=PackedStringArray("chrono")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80t64")
chrono = NodePath("PanelContainer/VBoxContainer/ChronoLabel")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 24.0
offset_right = -30.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ChronoLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_n2582")
horizontal_alignment = 1
script = ExtResource("1_01880")
start_at_beginning = false

[node name="LevelLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sample Level Text"
label_settings = SubResource("LabelSettings_jvvc3")
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
label_settings = SubResource("LabelSettings_1uukh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StaminaProgressBar" type="TextureProgressBar" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
max_value = 3.0
value = 1.0
texture_over = ExtResource("3_chd1m")
texture_progress = ExtResource("4_lngnv")

[node name="CollectiblePopupMenu" type="PopupMenu" parent="PanelContainer"]
initial_position = 1
size = Vector2i(300, 100)
item_count = 3
item_0/text = "COLLECTIBLE_POPUP"
item_0/id = 0
item_0/separator = true
item_1/text = "COLLECTIBLE_YES"
item_1/id = 1
item_2/text = "COLLECTIBLE_NO"
item_2/id = 2

[connection signal="id_pressed" from="PanelContainer/CollectiblePopupMenu" to="." method="_on_popup_menu_id_pressed"]
